style.css
* {
    box-sizing: border-box;
}

body {
    background-color: #0F0F0F;
    color: #DFDFDF;
    font-family: 'Lato', sans-serif;
    font-weight: 400;
    font-size: 1.375rem;
    letter-spacing: 0.015rem;
    line-height: 1.4545;
    margin: 0;
}

.container {
    max-width: 90rem;
    margin-left: auto;
    margin-right: auto;
    background-image: url(bg-head.png);
    background-size: 90rem;
    background-repeat: no-repeat;
    padding: 0 1.25rem;
}

@media (min-width: 650px) {
    .container {
        padding-left: 2.75rem;
        padding-right: 2.75rem;
    }
}

@media (min-width: 1440px) {
    .container {
        max-width: 120rem;
        background-image: url(bg-head.png);
        background-size: 120rem;
        background-repeat: no-repeat;
    }
}

.container-section {
    max-width: 69.5rem;
    margin-left: auto;
    margin-right: auto;
}

a {
    color: #DFDFDF;
}

h1,
h2,
h3 {
    font-family: 'Playfair Display', serif;
    font-weight: 700;
}

h2,
h3 {
    margin-bottom: 1.5rem;
}

h1 {
    font-size: max(min(8vw + 1rem, 6.875rem), 4rem);
    line-height: 1.125;
    letter-spacing: 0.025em;
    margin-top: 1.125rem;
    margin-bottom: 1.875rem;
}


h2 {
    font-size: clamp(3rem, 2.6667rem + 1.4815vw, 4rem);
    line-height: 1.22;
    letter-spacing: 0.05em;
    margin-top: 1.5rem;
}

h3 {
    font-size: 2.25rem;
    line-height: 1.22;
    letter-spacing: 0.05em;
    margin-top: 3rem;
    margin-bottom: 1.625rem;
}

@media (min-width: 1024px) {
    h3 {
        font-size: 2.375rem;
    }
}

p {
    margin-top: 0;
    margin-bottom: 2rem;
}

ul {
    list-style-type: "— ";
    padding-left: 1.375rem;
    margin-top: 0;
    margin-bottom: 4rem;
}

img {
    display: block;
    margin-bottom: 2.5rem;
    max-width: 100%;
    height: auto;
}

header {
    color: white;
    padding-bottom: 3.5rem;
}

@media (min-width: 650px) {
    header {
        padding-bottom: clamp(3.5rem, 1.8000rem + 8.5000vw, 12rem);
    }
}

.top-white-space {
    height: 1.25rem;
}

@media (min-width: 650px) {
    .top-white-space {
        display: none;
    }
}

.overheading {
    font-size: 1rem;
    text-transform: uppercase;
    letter-spacing: 0.3125em;
    line-height: 1.375;
    border-left: 2px solid;
    padding-top: 0.3125rem;
    padding-bottom: 0.3125rem;
    padding-left: 1rem;
}

@media (min-width: 1024px) {
    .overheading {
        font-size: 1.375rem;
        border: 0;
        padding-left: 0;
        display: flex;
    }

    .overheading::before {
        content: '';
        background-color: currentColor;
        flex-basis: 4.5rem;
        flex-shrink: 0;
        flex-grow: 0;
        height: 0.125rem;
        margin-right: 2rem;
        position: relative;
        top: calc(0.6875em - 1px);
    }
}

nav {
    display: none;
}

@media (min-width: 650px) {
    nav {
        margin-left: -0.375rem;
        margin-right: -0.375rem;
        margin-bottom: 2.375rem;
        display: flex;
        flex-wrap: wrap;
    }
}

@media (min-width: 980px) {
    nav {
        justify-content: flex-end;
        margin-left: -0.5rem;
        margin-right: -0.5rem;
    }
}

@media (min-width: 1460px) {
    nav {
        margin-right: clamp(0rem, -24.0000rem + 26.6667vw, 8rem);;
    }
}

nav ul {
    padding: 0;
    margin-top: 0.75rem;
    margin-bottom: 0;
}

nav li {
    display: inline-block;
    text-transform: uppercase;
    font-size: 1rem;
}

nav a {
    text-decoration: none;
    color: inherit;
    display: block;
    padding: 0.5rem;
}

@media (min-width: 980px) {
    nav a {
        padding: 0.75rem;
    }
}

.p-hero {
    max-width: 31rem;
}

.projects {
    margin-bottom: 4rem;
}

.projects-project {
    display: flex;
    flex-wrap: wrap;
    column-gap: 3rem;
}

.projects-project-reverse {
    flex-direction: row-reverse;
    justify-content: flex-end;
}

.projects-image {
    flex-basis: 20rem;
    flex-grow: 9999;
    flex-shrink: 1;
}

.projects-img {
    object-fit: cover;
    min-height: 20rem;
}

.projects-description {
    flex-grow: 1;
    flex-shrink: 0;
    flex-basis: 18.625rem;
    max-width: 32.5rem;
}

.contacts {
    display: flex;
    flex-wrap: wrap;
    column-gap: 1.5rem;
}

.contacts-image {
    flex-basis: 11.625rem;
    flex-grow: 0;
    flex-shrink: 1;
}

.contacts p {
    flex-grow: 0;
    flex-shrink: 1;
    flex-basis: 18.5rem;
}

